// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input  render input with error 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#8B8EA5",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#191C39",
            "fontSize": 40,
          },
          undefined,
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={
        [MockFunction] {
          "calls": Array [
            Array [
              "Some text value",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "green",
        }
      }
      testID="Input.TextInput"
      underlineColorAndroid="transparent"
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#F00",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      testID="Input.Icon"
    >
      
    </Text>
  </View>
</View>
`;

exports[`Input  render input without error 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#8B8EA5",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#191C39",
            "fontSize": 40,
          },
          undefined,
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={
        [MockFunction] {
          "calls": Array [
            Array [
              "Some text value",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "green",
        }
      }
      testID="Input.TextInput"
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;
